oprava gitignore (synchronizace prázdných složek)

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,19 @@
 # TensorFlow graph data files
 events.out.tfevents*
 
-/1_training_input_images
+/1_training_input_images/
 
-/2_bottleneck_data
+/2_bottleneck_data/
 
-/2_training_chache
+/2_training_chache/
 
-/3_training_output
+/3_training_output/
 
-/4_test_input_images
+/4_test_input_images/
 
-/5_test_chache
+/5_test_chache/
 
-/6_test_output
+/6_test_output/
 
 
 /bottleneck
